# DiffusionLitrev

./: .gitignore  BUILD  LICENSE  MODULE.bazel  README.md  WORKSPACE  lint.sh  package.json  pnpm-lock.yaml  pyproject.toml  requirements.in  requirements.txt  train.py
docs/: Gemfile  _config.yaml  _config.yml  index.markdown  index.md  instructions.md
docs/_includes/: head.html  header.html
docs/_layouts/: base.html
notebooks/: DDPM.ipynb  Datasets.ipynb  ProbabilisticDiffusionModel.ipynb  empty_notebook.ipynb
srcs/models/: pdm.py
srcs/modules/: multi_scale_convolution.py
tools/black/: BUILD
tools/flake8/: BUILD
tools/isort/: BUILD
tools/jupyter/: BUILD  build.py  jupyterlab.py  rules.bzl
tools/pyright/: BUILD  main.py
