[project]
name = "RetroDiffusion"
version = "0.0.1"
authors = [
  { name="Zsolt Pajor-Gyulai", email="pgyzs1@gmail.com" },
]
description = "An educational project about diffusion processes."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88
skip_gitignore = true
known_retrodiffusion = 'retrodiffusion'
default_section = 'THIRDPARTY'
sections = ['FUTURE','STDLIB','THIRDPARTY', 'RETRODIFFUSION', 'FIRSTPARTY','LOCALFOLDER']

[tool.black]
line-length = 88
target-version = ['py310']
exclude = '''
(
  /(
    | \.git
    | \.mypy_cache
    | \.tox
    | \.venv
    | \bazel-*
    | \bazel-bin
    | \bazel-genfiles
    | \bazel-out
    | \bazel-testlogs
  )/
)
'''

[tool.pyright]
exclude = [
    "bazel-*/",
]